[gd_scene load_steps=3 format=2]

[ext_resource path="res://gameplay/creatures_respawn/creatures_respawn.gd" type="Script" id=1]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -23, -25, 0, 0, 0, 0, 1341, -33, 0, 0, 0, 0, 1393, 796, 0, 0, 0, 0, -60, 815, 0, 0, 0, 0, -32, -22 )
}

[node name="creatures_respawn" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 1 )

[node name="path_follow" type="PathFollow2D" parent="."]
position = Vector2( -23, -25 )
rotation = -0.00586571

[node name="respawn_timer" type="Timer" parent="."]
autostart = true

[node name="explosions" type="Node2D" parent="."]

[connection signal="timeout" from="respawn_timer" to="." method="_on_respawn_timer_timeout"]
